--- a/lib-separator-lines.html
+++ b/lib-separator-lines.html
@@ -383,13 +383,23 @@
 <!-- About Us -->
  
 <div class="container py-5">
-<div class="product col-lg-12">
-    <div class="product-image col-lg-4">
-        <img src="img/lib-seperator.png" alt="LIB Separator Lines in India" title="LIB Separator Lines in India" class="w-100">
+<div class="product col-lg-12 flex-column">
+    <div class="product-description col-lg-12 bess">
+        <img src="img/lib-separator-inner.png" alt="LIB Separator Lines in India" title="LIB Separator Lines in India" class="w-100">
     </div>
-    <div class="product-description col-lg-8">
-        <h2><strong>LIB Separator Lines</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+    <div class="product-description col-lg-12 pt-5">
+        <h2><strong>LIB Separator Lines</strong></h2> <br>
+        <p>A Lithium Battery Separator Line is a specialized production line designed to manufacture the separator film — a critical component in lithium-ion batteries that ensures safety and performance. The separator is a microporous polymer membrane placed between the anode and cathode to prevent direct contact (which could cause short circuits) while allowing lithium ions to pass freely during charge and discharge cycles.</p> <br> <br>
+        <h3><u>The production line typically includes the following stages:</u></h3> <br>
+        <ul>
+          <li>Raw material feeding & extrusion: Polymer resins (like PE or PP) are melted and extruded into thin films.</li>
+          <li>Stretching process (uniaxial or biaxial): Mechanical stretching creates the microporous structure that defines the separator’s permeability and mechanical strength.</li>
+          <li>Annealing & heat setting: Ensures dimensional stability and consistent pore distribution.</li>
+          <li>Surface coating (optional): Ceramic or functional coatings improve thermal stability and wettability.</li>
+          <li>Winding & slitting: The finished separator films are precisely slit and rolled for cell manufacturing use.</li>
+          <li>Quality inspection & packaging: Automated vision systems check for thickness uniformity, porosity, and defect-free surface before final packaging.</li>
+        </ul> <br> <br>
+        <p>These lines are engineered for high precision, cleanroom operation, and continuous production, ensuring consistent separator quality essential for battery safety, energy density, and cycle life.</p>
     </div>
 </div>
 </div>
