--- a/lithium-cell-lines.html
+++ b/lithium-cell-lines.html
@@ -441,7 +441,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Lithium Cell Raw Materials in India" title="Lithium Cell Raw Materials in India"></a>
+        <a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials in India"><img src="img/lithium-cell-raw-material.png" class="card-img-top product-img" alt="Lithium Cell Raw Materials in India" title="Lithium Cell Raw Materials in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Lithium Cell Raw Materials</h5>
