--- a/giga-factories.html
+++ b/giga-factories.html
@@ -383,13 +383,56 @@
 <!-- About Us -->
  
 <div class="container py-5">
-<div class="product col-lg-12">
-    <div class="product-image col-lg-4">
+<div class="product col-lg-12 flex-column">
+    <div class="product-description col-lg-12">
         <img src="img/DEMO.png" alt="Giga Factories in India" title="Giga Factories in India" class="w-100">
     </div>
-    <div class="product-description col-lg-8">
-        <h2><strong>Giga Factories</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+    <div class="product-description col-lg-12 pt-5">
+        <h2><strong>Typical Production Flow for 1 GWh LFP Cell Line</strong></h2> <br> <br>
+        <h3>Raw Material Preparation</h3> <br>
+        <ul>
+          <li>Cathode Material: LFP powder (LiFePO₄) mixed with conductive carbon and binder.</li>
+          <li>Anode Material: Graphite (natural or synthetic) mixed with binder</li>
+          <li>Slurry Mixing: High-speed mixers create uniform cathode and anode slurries.</li>
+        </ul> <br><br>
+        <h3>Electrode Manufacturing</h3><br>
+        <ul>
+        <li>Coating: Slurries coated on aluminum (cathode) and copper (anode) foils.</li>
+        <li>Drying: Continuous drying ovens remove solvents.</li>
+        <li>Calendering: Rolls compress coated foils for uniform density and thickness.</li>
+        <li>Slitting: Electrodes cut into precise widths for stacking or winding.</li>
+        </ul><br><br>
+
+        <h3>Cell Assembly</h3><br>
+        <ul>
+        <li>Stacking / Winding: LFP cells can be prismatic or cylindrical, depending on design.</li>
+        <li>Electrolyte Filling: Cells filled with LiPF₆-based electrolyte.</li>
+        <li>Sealing: Pouch or prismatic cans sealed in controlled dry room conditions.</li>
+        </ul><br><br>
+
+        <h3>Formation & Aging</h3><br>
+        <ul>
+          <li>Formation: Controlled charge-discharge cycles activate electrodes and form SEI layer.</li>
+          <li>Aging: Cells rest for stability and performance verification.</li>
+          <li>Testing & Grading: Cells sorted by voltage, capacity, and impedance.</li>
+        </ul><br><br>
+        <h3>Packing & Traceability</h3><br>
+        <ul>
+          <li>PCells packed in vacuum-sealed trays under inert atmosphere.</li>
+          <li>Data logged into MES (Manufacturing Execution System) for traceability.</li>
+        </ul> <br> <br>
+        <h3><strong><u>Key Specifications for 1 GWh LFP Line</u></strong></h3> <br>
+        <table>
+  <tr><th>Parameter</th><th>Specification</th></tr>
+  <tr><td>Annual Output</td><td>1 GWh (~20 million 50 Ah cells)</td></tr>
+  <tr><td>Chemistry</td><td>Lithium Iron Phosphate (LiFePO₄)</td></tr>
+  <tr><td>Cell Format</td><td>Prismatic / Pouch</td></tr>
+  <tr><td>Production Area</td><td>~20,000–25,000 m² (cleanroom zones)</td></tr>
+  <tr><td>Automation Level</td><td>Semi or fully automated line</td></tr>
+  <tr><td>Power Consumption</td><td>~15–20 MW installed capacity</td></tr>
+  <tr><td>Workforce</td><td>200–300 (operators + engineers)</td></tr>
+  <tr><td>Dry Room Humidity</td><td> < 1% RH (dew point −40°C)</th></tr>
+</table>
     </div>
 </div>
 </div>
