--- a/lib-separator-lines.html
+++ b/lib-separator-lines.html
@@ -392,12 +392,12 @@
         <p>A Lithium Battery Separator Line is a specialized production line designed to manufacture the separator film — a critical component in lithium-ion batteries that ensures safety and performance. The separator is a microporous polymer membrane placed between the anode and cathode to prevent direct contact (which could cause short circuits) while allowing lithium ions to pass freely during charge and discharge cycles.</p> <br> <br>
         <h3><u>The production line typically includes the following stages:</u></h3> <br>
         <ul>
-          <li>Raw material feeding & extrusion: Polymer resins (like PE or PP) are melted and extruded into thin films.</li>
-          <li>Stretching process (uniaxial or biaxial): Mechanical stretching creates the microporous structure that defines the separator’s permeability and mechanical strength.</li>
-          <li>Annealing & heat setting: Ensures dimensional stability and consistent pore distribution.</li>
-          <li>Surface coating (optional): Ceramic or functional coatings improve thermal stability and wettability.</li>
-          <li>Winding & slitting: The finished separator films are precisely slit and rolled for cell manufacturing use.</li>
-          <li>Quality inspection & packaging: Automated vision systems check for thickness uniformity, porosity, and defect-free surface before final packaging.</li>
+          <li><strong>Raw material feeding & extrusion:</strong> Polymer resins (like PE or PP) are melted and extruded into thin films.</li>
+          <li><strong>Stretching process (uniaxial or biaxial):</strong> Mechanical stretching creates the microporous structure that defines the separator’s permeability and mechanical strength.</li>
+          <li><strong>Annealing & heat setting:</strong> Ensures dimensional stability and consistent pore distribution.</li>
+          <li><strong>Surface coating (optional):</strong> Ceramic or functional coatings improve thermal stability and wettability.</li>
+          <li><strong>Winding & slitting:</strong> The finished separator films are precisely slit and rolled for cell manufacturing use.</li>
+          <li><strong>Quality inspection & packaging:</strong> Automated vision systems check for thickness uniformity, porosity, and defect-free surface before final packaging.</li>
         </ul> <br> <br>
         <p>These lines are engineered for high precision, cleanroom operation, and continuous production, ensuring consistent separator quality essential for battery safety, energy density, and cycle life.</p>
     </div>
