--- a/lithium-cell-lines.html
+++ b/lithium-cell-lines.html
@@ -402,11 +402,11 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="giga-factories.html" title="Giga Factories in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Giga Factories in India" title="Giga Factories in India"></a>
+        <a href="giga-factories.html" title="Giga Factories in India"><img src="img/giga-factories.png" class="card-img-top product-img" alt="Giga Factories in India" title="Giga Factories in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Giga Factories</h5>
-            <p class="card-text text-muted">End-to-end solutions for Battery Giga Factories, including turnkey production lines, automation, testing, and energy storage integration to support large-scale lithium-ion manufacturing.</p>
+            <p class="card-text text-muted">A 1 GWh Gigafactory is a large-scale lithium-ion battery cell manufacturing plant with an annual production capacity of 1 gigawatt-hour</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
