--- a/giga-factories.html
+++ b/giga-factories.html
@@ -384,8 +384,8 @@
  
 <div class="container py-5">
 <div class="product col-lg-12 flex-column">
-    <div class="product-description col-lg-12">
-        <img src="img/DEMO.png" alt="Giga Factories in India" title="Giga Factories in India" class="w-100">
+    <div class="product-description col-lg-12 bess">
+        <img src="img/giga-factories-inner.png" alt="Giga Factories in India" title="Giga Factories in India" class="w-100">
     </div>
     <div class="product-description col-lg-12 pt-5">
         <h2><strong>Typical Production Flow for 1 GWh LFP Cell Line</strong></h2> <br> <br>
