--- a/lithium-cell-lines.html
+++ b/lithium-cell-lines.html
@@ -423,7 +423,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Lab/Pilot Lines</h5>
-            <p class="card-text text-muted">Flexible Lab and Pilot Lines for lithium-ion battery R&D and small-scale production, enabling testing, prototyping, and process optimization with precision and scalability.</p>
+            <p class="card-text text-muted">A lab or pilot line is a small-scale, semi-automated manufacturing setup designed to develop, test, and optimize lithium-ion cell manufacturing processes before mass production.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
