--- a/giga-factories.html
+++ b/giga-factories.html
@@ -391,30 +391,30 @@
         <h2><strong>Typical Production Flow for 1 GWh LFP Cell Line</strong></h2> <br> <br>
         <h3>Raw Material Preparation</h3> <br>
         <ul>
-          <li>Cathode Material: LFP powder (LiFePO₄) mixed with conductive carbon and binder.</li>
-          <li>Anode Material: Graphite (natural or synthetic) mixed with binder</li>
-          <li>Slurry Mixing: High-speed mixers create uniform cathode and anode slurries.</li>
+          <li><strong>Cathode Material:</strong> LFP powder (LiFePO₄) mixed with conductive carbon and binder.</li>
+          <li><strong>Anode Material:</strong> Graphite (natural or synthetic) mixed with binder</li>
+          <li><strong>Slurry Mixing:</strong> High-speed mixers create uniform cathode and anode slurries.</li>
         </ul> <br><br>
         <h3>Electrode Manufacturing</h3><br>
         <ul>
-        <li>Coating: Slurries coated on aluminum (cathode) and copper (anode) foils.</li>
-        <li>Drying: Continuous drying ovens remove solvents.</li>
-        <li>Calendering: Rolls compress coated foils for uniform density and thickness.</li>
-        <li>Slitting: Electrodes cut into precise widths for stacking or winding.</li>
+        <li><strong>Coating:</strong> Slurries coated on aluminum (cathode) and copper (anode) foils.</li>
+        <li><strong>Drying:</strong> Continuous drying ovens remove solvents.</li>
+        <li><strong>Calendering:</strong> Rolls compress coated foils for uniform density and thickness.</li>
+        <li><strong>Slitting:</strong> Electrodes cut into precise widths for stacking or winding.</li>
         </ul><br><br>
 
         <h3>Cell Assembly</h3><br>
         <ul>
-        <li>Stacking / Winding: LFP cells can be prismatic or cylindrical, depending on design.</li>
-        <li>Electrolyte Filling: Cells filled with LiPF₆-based electrolyte.</li>
-        <li>Sealing: Pouch or prismatic cans sealed in controlled dry room conditions.</li>
+        <li><strong>Stacking / Winding:</strong> LFP cells can be prismatic or cylindrical, depending on design.</li>
+        <li><strong>Electrolyte Filling:</strong> Cells filled with LiPF₆-based electrolyte.</li>
+        <li><strong>Sealing:</strong> Pouch or prismatic cans sealed in controlled dry room conditions.</li>
         </ul><br><br>
 
         <h3>Formation & Aging</h3><br>
         <ul>
-          <li>Formation: Controlled charge-discharge cycles activate electrodes and form SEI layer.</li>
-          <li>Aging: Cells rest for stability and performance verification.</li>
-          <li>Testing & Grading: Cells sorted by voltage, capacity, and impedance.</li>
+          <li><strong>Formation:</strong> Controlled charge-discharge cycles activate electrodes and form SEI layer.</li>
+          <li><strong>Aging:</strong> Cells rest for stability and performance verification.</li>
+          <li><strong>Testing & Grading:</strong> Cells sorted by voltage, capacity, and impedance.</li>
         </ul><br><br>
         <h3>Packing & Traceability</h3><br>
         <ul>
