--- a/lab-pilot-lines.html
+++ b/lab-pilot-lines.html
@@ -383,13 +383,39 @@
 <!-- About Us -->
  
 <div class="container py-5">
-<div class="product col-lg-12">
-    <div class="product-image col-lg-4">
-        <img src="img/DEMO.png" alt="Lab/Pilot Lines in India" title="Lab/Pilot Lines in India" class="w-100">
+<div class="product col-lg-12 flex-column">
+    <div class="product-description col-lg-12 bess">
+        <img src="img/giga-factories-inner.png" alt="Giga Factories in India" title="Giga Factories in India" class="w-100">
     </div>
-    <div class="product-description col-lg-8">
-        <h2><strong>Lab/Pilot Lines</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+    <div class="product-description col-lg-12 pt-5">
+        <h3>Equipment in a Typical Pilot Line</h3> <br>
+        <ul>
+          <li>Slurry Mixer (Cathode & Anode)</li>
+          <li>Coating & Drying Unit</li>
+          <li>Calendering & Slitting Machine</li>
+          <li>Electrode Cutting Machine</li>
+          <li>Stacking / Winding Machine</li>
+          <li>Ultrasonic Welding Station</li>
+          <li>Electrolyte Filling & Vacuum Sealing Unit</li>
+          <li>Formation & Aging Racks</li>
+          <li>Cycler & EIS Testers</li>
+        </ul> <br><br>
+        <h3>Applications</h3><br>
+        <ul>
+        <li>Material research and validation</li>
+        <li>Cell design development</li>
+        <li>Process optimization and training</li>
+        <li>Quality control for large-scale replication</li>
+        <li>Sample cell production for EV, ESS, or consumer electronics</li>
+        </ul><br><br>
+
+        <h3>Benefits of a Pilot Line</h3><br>
+        <ul>
+        <li>Enables fast innovation without large capital risk</li>
+        <li>Provides data and process parameters for scaling up to gigafactories</li>
+        <li>Helps achieve consistency and yield improvement before mass production</li>
+        <li>Flexible: Can switch between chemistries and formats</li>
+        </ul><br><br>
     </div>
 </div>
 </div>
