--- a/lithium-cell-lines.html
+++ b/lithium-cell-lines.html
@@ -419,7 +419,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="lab-pilot-lines.html" title="Lab/Pilot Lines in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Lab/Pilot Lines in India" title="Lab/Pilot Lines in India"></a>
+        <a href="lab-pilot-lines.html" title="Lab/Pilot Lines in India"><img src="img/lab-pilot-line.png" class="card-img-top product-img" alt="Lab/Pilot Lines in India" title="Lab/Pilot Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Lab/Pilot Lines</h5>
