--- a/lab-pilot-lines.html
+++ b/lab-pilot-lines.html
@@ -385,7 +385,7 @@
 <div class="container py-5">
 <div class="product col-lg-12 flex-column">
     <div class="product-description col-lg-12 bess">
-        <img src="img/giga-factories-inner.png" alt="Giga Factories in India" title="Giga Factories in India" class="w-100">
+        <img src="img/lab-pilot-line-inner.png" alt="Lab/Pilot Lines in India" title="Lab/Pilot Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-12 pt-5">
         <h3>Equipment in a Typical Pilot Line</h3> <br>
