--- a/solar-cell-production-lines.html
+++ b/solar-cell-production-lines.html
@@ -391,7 +391,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/DEMO.png" alt="Solar Cell Production Lines in India" title="Solar Cell Production Lines in India" class="w-100">
+        <img src="img/solar-cell-production-lines-inner.png" alt="Solar Cell Production Lines in India" title="Solar Cell Production Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Solar Cell Production Lines</strong></h2>
