--- a/solar-pv.html
+++ b/solar-pv.html
@@ -402,7 +402,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-cell-production-lines.html" title="Solar Cell Production Line in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Cell Production Line in India" title="Solar Cell Production Line in India"></a>
+        <a href="solar-cell-production-lines.html" title="Solar Cell Production Line in India"><img src="img/solar-cell-production-lines.png" class="card-img-top product-img" alt="Solar Cell Production Line in India" title="Solar Cell Production Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Cell Production Lines</h5>
