--- a/laminator.html
+++ b/laminator.html
@@ -446,16 +446,16 @@
   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 quick_links">
   <h6><span class="font-italic font-weight-bold">Product Links</span></h6>
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="#" title="Universal Cut Cells MBB Tabber Stringer" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Universal Cut Cells MBB Tabber Stringer</a></li>
+  <li class="border-bottom"><a href="tabber-stringer.html" title="Universal Cut Cells MBB Tabber Stringer" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Universal Cut Cells MBB Tabber Stringer</a></li>
 
-  <li class="border-bottom"><a href="#" title="Turnkey Solar PV Reliability Lab" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Solar PV Reliability Lab</a></li>
+  <li class="border-bottom"><a href="pv-reliability-turnkey-lab.html" title="Turnkey Solar PV Reliability Lab" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Solar PV Reliability Lab</a></li>
 
-  <li class="border-bottom"><a href="#" title="Automatic Laser welding for 3000W & ESS Lithium Battery Packs" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Automatic Laser welding for 3000W & ESS Lithium Battery Packs</a></li>
+  <li class="border-bottom"><a href="laser-welding-machines.html" title="Automatic Laser welding for BESS & Battery Packs" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Automatic Laser welding for BESS & Battery Packs</a></li>
 
-  <li class="border-bottom"><a href="#" title="Battery Cell & Pack Testers" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Cell & Pack Testers</a></li>
+  <li class="border-bottom"><a href="battery-pack-testers.html" title="Battery Cell & Pack Testers" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Cell & Pack Testers</a></li>
 
-  <li class="border-bottom"><a href="#" title="BESS Container Assembly Line & Component Solutions" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  BESS Container Assembly Line & Component Solutions</a></li>
-  <li class="border-bottom"><a href="#" title="Cooling Systems for C&I and BESS Solutions" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Cooling Systems for C&I and BESS Solutions </a></li>
+  <li class="border-bottom"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Line & Component Solutions" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  BESS Container Assembly Line & Component Solutions</a></li>
+  <li class="border-bottom"><a href="bess-cooling-system.html" title="Cooling Systems for C&I and BESS Solutions" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Cooling Systems for C&I and BESS Solutions </a></li>
   
   </ul>
   </div>
