--- a/news-and-events.html
+++ b/news-and-events.html
@@ -384,7 +384,7 @@
 <div class="container ">
     <div class="head pt-3">
         <h1 class="text-center"><u>News & Events</u></h1> <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, suscipit omnis iusto numquam tenetur libero perspiciatis voluptatum facere aliquid, debitis excepturi eligendi qui explicabo possimus? Voluptatibus incidunt dolorum dolor ut! Soluta ipsam enim nam corporis veritatis, consectetur, tenetur hic possimus incidunt esse, illum nobis explicabo laudantium aperiam laboriosam pariatur iure praesentium cumque inventore tempore vitae! Rem reiciendis ipsum fugiat dicta doloremque ipsam nemo quibusdam facilis corrupti illum! Voluptas harum ullam laudantium reprehenderit optio, molestias deleniti cum eum quia reiciendis molestiae doloribus eaque fuga quod nisi voluptate nostrum odit a assumenda, expedita iste in consequatur repudiandae magnam. Nam, minus repellat vitae quo fugit quasi nemo laboriosam porro tempora neque sint soluta iure reprehenderit molestias possimus culpa dignissimos veniam necessitatibus doloribus consectetur harum. Cumque accusantium necessitatibus, neque enim molestias nihil reprehenderit perferendis vero dolorem quibusdam ea at maxime ullam quisquam unde esse ratione inventore. Alias, excepturi molestias sequi dolorum odio magnam dignissimos, totam, doloribus modi saepe veniam tempora? Doloremque minima alias qui repellendus placeat eius aut voluptatum sint? Accusantium quam nobis expedita dolorum! Veritatis quibusdam, iusto rerum ipsum est itaque commodi, voluptatibus quam obcaecati hic assumenda! Veritatis iure pariatur ut nemo necessitatibus doloribus architecto recusandae sint facilis ea velit ex laboriosam sit autem inventore impedit similique odio quae laudantium sunt laborum explicabo, deserunt consequuntur ad? Quaerat rem est fugiat ab illum harum nesciunt sequi temporibus explicabo saepe, quam impedit nostrum veniam laboriosam assumenda earum! Explicabo illum laborum aperiam sunt sapiente fugiat nobis. Aperiam ipsa sed mollitia velit nemo vitae hic, placeat quis deleniti minima beatae officiis illum. Distinctio veniam odit unde voluptas autem nam nihil quisquam hic! Nulla, distinctio? Itaque vitae veritatis, error repellat quos iure laborum ab ullam optio dicta, perferendis voluptatibus facilis nesciunt ipsam provident dolores ipsa ducimus nulla reprehenderit, dignissimos minus nam recusandae. Doloremque minus accusantium deleniti magnam consequuntur.</p>
+        
     </div>
 </div>
   <!-- Footer -->
@@ -430,16 +430,16 @@
   <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 quick_links">
   <h6><span class="font-italic font-weight-bold">Product Links</span></h6>
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="#" title="Universal Cut Cells MBB Tabber Stringer" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Universal Cut Cells MBB Tabber Stringer</a></li>
+  <li class="border-bottom"><a href="tabber-stringer.html" title="Universal Cut Cells MBB Tabber Stringer" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Universal Cut Cells MBB Tabber Stringer</a></li>
 
-  <li class="border-bottom"><a href="#" title="Turnkey Solar PV Reliability Lab" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Solar PV Reliability Lab</a></li>
+  <li class="border-bottom"><a href="pv-reliability-turnkey-lab.html" title="Turnkey Solar PV Reliability Lab" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Solar PV Reliability Lab</a></li>
 
-  <li class="border-bottom"><a href="#" title="Automatic Laser welding for 3000W & ESS Lithium Battery Packs" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Automatic Laser welding for 3000W & ESS Lithium Battery Packs</a></li>
+  <li class="border-bottom"><a href="laser-welding-machines.html" title="Automatic Laser welding for BESS & Battery Packs" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Automatic Laser welding for BESS & Battery Packs</a></li>
 
-  <li class="border-bottom"><a href="#" title="Battery Cell & Pack Testers" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Cell & Pack Testers</a></li>
+  <li class="border-bottom"><a href="battery-pack-testers.html" title="Battery Cell & Pack Testers" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Cell & Pack Testers</a></li>
 
-  <li class="border-bottom"><a href="#" title="BESS Container Assembly Line & Component Solutions" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  BESS Container Assembly Line & Component Solutions</a></li>
-  <li class="border-bottom"><a href="#" title="Cooling Systems for C&I and BESS Solutions" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Cooling Systems for C&I and BESS Solutions </a></li>
+  <li class="border-bottom"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Line & Component Solutions" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  BESS Container Assembly Line & Component Solutions</a></li>
+  <li class="border-bottom"><a href="bess-cooling-system.html" title="Cooling Systems for C&I and BESS Solutions" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Cooling Systems for C&I and BESS Solutions </a></li>
   
   </ul>
   </div>
