--- a/fully-auto-lines.html
+++ b/fully-auto-lines.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Indygreen Technologies offers advanced Fully Auto Lines for solar PV production, providing fully automated, precise, and high-efficiency solutions for solar panel and module assembly." />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="fully auto solar PV lines, fully automatic solar panel assembly, solar PV production equipment, automated solar module manufacturing, Indygreen Technologies, turnkey solar PV production lines, solar panel assembly solutions" />
+<meta name="keywords" content="fully automatic solar pv production line, automatic solar panel manufacturing equipment, pv module production line, robotic solar module assembly, high speed solar manufacturing line, turnkey solar module production system, automated photovoltaic panel assembly, fully auto pv line manufacturer, solar panel production machinery, solar pv automation solutions, smart solar manufacturing, automatic solar module plant, solar manufacturing turnkey solutions, fully automatic solar production system India, large scale solar panel factory setup" />
 
 <!-- Robots -->
 <meta name="robots" content="index, follow" />
@@ -394,12 +394,77 @@
         <img src="img/fully-auto.png" alt=" Fully Auto Lines in India" title=" Fully Auto Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Fully Auto Lines</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+        <h2><strong>Fully Auto Lines</strong></h2> <br>
+        <p>Our Fully Automatic Solar PV Module Production Lines represent the next generation of high-efficiency solar panel manufacturing technology, designed for large-scale production with maximum automation, precision, and reliability. These advanced lines ensure consistent quality, faster throughput, and minimal human intervention, delivering superior productivity for modern solar module factories.</p> <br>
+        <p>Equipped with state-of-the-art robotics, intelligent conveyors, and AI-based process control, our fully automated systems streamline every stage of solar module assembly — from cell stringing to final testing — ensuring high yield, operational stability, and seamless performance around the clock.</p>
     </div>
 </div>
 </div>
 
+<div class="container py-3">
+    <section class="cell-tech">
+    <h3>Complete Process Automation</h3>
+    <p><strong>Our fully automatic lines integrate the following key processes:</strong></p>
+    <ul>
+      <li>Automatic Cell Loading, Tabber & Stringer Machines for precise cell interconnection</li>
+      <li>Robotic Layup and Bussing Stations ensuring perfect alignment and minimal cell breakage</li>
+      <li>Automatic Glass & Backsheet Loading Systems for uniform lamination preparation</li>
+      <li>High-Precision Lamination Units with optimized thermal and vacuum profiles</li>
+      <li>Automatic Trimming, Framing, and Junction Box Installation Machines</li>
+      <li>Integrated EL, Hi-Pot, and IV Testing Systems for quality assurance</li>
+      <li>Automatic Sorting, Packaging, and Data Traceability Modules</li>
+    </ul>
+    <p>Each system is linked via smart conveyors and MES integration, allowing centralized control and real-time monitoring.</p>
+
+    <h3>Key Advantages</h3>
+    <ul>
+      <li><strong>High Production Capacity:</strong> Up to 100–300 MW per year depending on configuration</li>
+      <li><strong>Zero Manual Handling:</strong> Robotics and conveyors manage every step for consistent quality</li>
+      <li><strong>Precision & Repeatability:</strong> Maintains cell alignment and soldering accuracy with < 0.3 mm tolerance</li>
+      <li><strong>Reduced Labor Costs:</strong> Only minimal operators required for supervision and quality control</li>
+      <li><strong>Real-Time Monitoring:</strong> Smart sensors and MES connectivity enable predictive maintenance and data tracking</li>
+      <li><strong>Compatibility:</strong> Supports latest cell technologies including Mono PERC, TOPCon, HJT, Bifacial, and IBC modules</li>
+      <li><strong>Energy-Efficient Design:</strong> Optimized for low power consumption and high output ratio</li>
+    </ul>
+
+    <h3>Why Choose a Fully Automatic Solar Line?</h3>
+    <p><strong>Our fully automated PV production lines are engineered for large-scale module manufacturers aiming to achieve:</strong></p>
+    <ul>
+      <li>High-speed production with minimal downtime</li>
+      <li>Consistent quality assurance through automated inspection systems</li>
+      <li>Scalability and customization according to factory layout and production targets</li>
+      <li>Long-term cost savings and fast ROI through automation efficiency</li>
+      <li>Global standard compliance (IEC 61215 & 61730, UL, BIS, ISO-certified)</li>
+    </ul>
+
+    <h3>Applications</h3>
+    <ul>
+      <li>Utility-scale solar module manufacturing plants</li>
+      <li>Export-oriented PV factories</li>
+      <li>High-efficiency module production for residential, commercial, and utility markets</li>
+      <li>Upgradation of existing semi-automatic lines to full automation</li>
+    </ul>
+
+    <h3>Value-Added Services</h3>
+    <ul>
+      <li>Complete turnkey project execution — from factory layout to installation</li>
+      <li>Process optimization and technology transfer for module efficiency improvement</li>
+      <li>On-site training, maintenance, and after-sales support</li>
+      <li>Integration with ERP/MES systems for production data management and traceability</li>
+    </ul>
+
+    <h3>Benefits at a Glance</h3>
+    <ul>
+      <li>Fully automated from cell to finished module</li>
+      <li>Designed for 24/7 continuous operation</li>
+      <li>Ensures zero human error and maximum throughput</li>
+      <li>Shorter cycle time per module, increasing daily output</li>
+      <li>Global supplier network for spare parts and technical support</li>
+    </ul>
+
+  </section>
+
+</div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
