--- a/laser-cutters.html
+++ b/laser-cutters.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Indygreen Technologies offers precision Laser Cutters for solar PV production, enabling accurate cutting of solar cells and components for efficient and high-quality module assembly." />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="solar PV laser cutters, solar cell cutting machines, solar module production equipment, precision laser cutting for solar panels, Indygreen Technologies, solar PV manufacturing solutions, solar panel assembly equipment" />
+<meta name="keywords" content="laser cutter for solar cells, solar pv laser cutting machine, solar cell scribing equipment, half cell laser cutter, photovoltaic laser processing machine, pv laser scribing system, laser edge isolation machine, automatic solar laser cutting equipment, laser system for solar module production, green laser solar cell cutter, uv laser pv scribing, topcon hjt laser cutter, solar cell half cutting machine, precision pv laser machine, solar panel manufacturing equipment" />
 
 <!-- Robots -->
 <meta name="robots" content="index, follow" />
