--- a/turnkey-assembly-lines.html
+++ b/turnkey-assembly-lines.html
@@ -417,8 +417,8 @@
 <div class="app">
       <h2>Applications</h2>
     <p>Our cylindrical battery packs are designed for a wide range of <strong>industrial and consumer applications</strong>, including:</p>
-    <div class="app-sec col-lg-12">
-      <div class="application-sec col-lg-6">
+    <div class="app-sec col-lg-12 justify-content-center">
+      <!--<div class="application-sec col-lg-6">
       <ul>
     <li>Power Tools</li>
     <li>Power Banks</li>
@@ -433,7 +433,7 @@
     <li>IoT Devices</li>
     <li>Electric Boats and Small Vehicles</li>
     </ul>
-    </div>
+    </div>-->
     <div class="app-image col-lg-6">
       <img src="img/turnkey-applications.jpeg" alt="Applications of Turnkey Assembly Lines" title="Applications of Turnkey Assembly Lines" class="w-100">
     </div>
