--- a/contact-us.html
+++ b/contact-us.html
@@ -391,7 +391,8 @@
     </div>
     <div class="info-content text-center">
     <span class="title font-weight-bold">Corporate Office</span>
-    <p class="text-center">B-126, 2nd Floor, Mayapuri Industrial Area, Ph-1, New Delhi-110064, INDIA</p>
+    <p class="text-center">B-126, 2nd Floor, Mayapuri Industrial Area, Ph-1, <br>
+      New Delhi-110064, INDIA</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.125145785906!2d77.12130936549514!3d28.626011141126053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d03381eac2a43%3A0xf7acf6d2950bc613!2sINDYGREEN%20TECHNOLOGIES%20PVT%20LTD!5e0!3m2!1sen!2sin!4v1664093277156!5m2!1sen!2sin" width="100%" class="d-block mt-3" height="200" style="border:0;" allowfullscreen="" loading="lazy" class="mt-3 d-block" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </div>
